--- a/Lab2/MakeFile
+++ b/Lab2/MakeFile
@@ -1,5 +1,5 @@
-CC     = gcc
-CFLAGS = -std=c99 -Wall -g
+CC     = c99
+CFLAGS = -D_DEFAULT_SOURCE -Wall -g
 PARSER_TEST_HEADER = parser.h
 
 parser_test:    parser_test.c parser.c $(PARSER_TEST_HEADER)
