--- a/Lab2/MakeFile
+++ b/Lab2/MakeFile
@@ -1,8 +1,21 @@
-CC     = c99
-CFLAGS = -D_DEFAULT_SOURCE -Wall -g
-DYNAMIC_CFILES = DynamicArray.c DynamicString.c
-DYNAMIC_HEADERS = DynamicArray.h DynamicString.h
-PARSER_TEST_HEADER = parser.h
+#CC     = c99
+#CFLAGS = -D_DEFAULT_SOURCE -Wall -g
+#DYNAMIC_CFILES = DynamicArray.c DynamicString.c
+#DYNAMIC_HEADERS = DynamicArray.h DynamicString.h
+#PARSER_TEST_HEADER = parser.h
+#
+#parser_test:    parser_test.c parser.c $(DYNAMIC_CFILES) $(PARSER_TEST_HEADER) $(DYNAMIC_HEADERS)
+#						$(CC) $(CFLAGS) parser_test.c parser.c $(DYNAMIC_CFILES) -o $@
+#
+##################################################################################################
+#CC     = c99
+#CFLAGS = -D_DEFAULT_SOURCE -Wall -g
+#DYNAMIC_CFILES = DynamicArray.c DynamicString.c
+#DYNAMIC_HEADERS = DynamicArray.h DynamicString.h
+#PARSER_TEST_HEADER = parser.h
 
-parser_test:    parser_test.c parser.c $(DYNAMIC_CFILES) $(PARSER_TEST_HEADER) $(DYNAMIC_HEADERS)
-						$(CC) $(CFLAGS) parser_test.c parser.c $(DYNAMIC_CFILES) -o $@
+#parser_test:    parser_test.c parser.c $(DYNAMIC_CFILES)
+#						$(CC) $(CFLAGS) parser_test.c parser.c $(DYNAMIC_CFILES) -o $@
+
+parser_test: parser_test.c parser.c DynamicArray.c DynamicString.c
+						c99 -D_DEFAULT_SOURCE -Wall -g parser_test.c parser.c DynamicArray.c DynamicString.c -o $@
