--- a/Lab2/MakeFile
+++ b/Lab2/MakeFile
@@ -17,5 +17,5 @@
 #parser_test:    parser_test.c parser.c $(DYNAMIC_CFILES)
 #						$(CC) $(CFLAGS) parser_test.c parser.c $(DYNAMIC_CFILES) -o $@
 
-parser_test: parser_test.c parser.c DynamicArray.c DynamicString.c parsertokens.c
-						c99 -D_DEFAULT_SOURCE -Wall -g parser_test.c parser.c DynamicArray.c DynamicString.c parsertokens.c -o $@
+parser_test: parser_test.c parser.c parsertokens.c DynamicByteArray.c
+						c99 -D_DEFAULT_SOURCE -Wall -g parser_test.c parser.c parsertokens.c DynamicByteArray.c -o $@
