backgrounding now works, while it seems no zombie processes are created

--- a/Lab2/iwish/Makefile
+++ b/Lab2/iwish/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -Werror -std=c99 -pedantic
+CFLAGS = -D_DEFAULT_SOURCE -Wall -Werror -std=c99 -pedantic
 DEBUGFLAGS = -g
 SOURCEDIR := src
 
